[package]
name = "webview"
version = "0.1.0"
authors = ["Uwe Riegel <uriegel@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webview2 = "0.1"
once_cell = "1.7"
winapi = { version = "0.3.9", features = [
    "libloaderapi",

]}
winit = "0.24.0"
